Bytecode lib 90% finished. Todo: - create visitor system - create dynamic class edit system - code optimization